--- a/src/containers/App/styles.css
+++ b/src/containers/App/styles.css
@@ -7,5 +7,22 @@
 }
 
 .app-title {
-  font-size: 1.5em;
+  font-size: 32px;
+}
+
+.app-play {
+  margin-top: 30px;
+  width: 150px;
+  height: 50px;
+  font-size: 24px;
+  border-radius: 5px;
+  border-width: 0;
+  background-color: #053253;
+  color: #FFF;
+  cursor: pointer;
+}
+
+.app-play[disabled] {
+  opacity: 0.6;
+  cursor: initial;
 }
