--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
+@import "../node_modules/font-awesome/css/font-awesome.css";
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: #053253;
 }
